fix residents overflow

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -117,3 +117,8 @@ ul {
   .card-name{
     margin: 1% 0 0 1.75%;
   }
+
+.planets-residents {
+  height: 50%;
+  overflow-y: auto;
+}
